--- a/products/src/main/resources/prod.properties
+++ b/products/src/main/resources/prod.properties
@@ -1,7 +1,6 @@
 
 spring.application.name=products
-
-
+spring.profiles.active=dev
 spring.cloud.config.uri=http://localhost:8888
 
 spring.jpa.hibernate.ddl-auto=update
