Add asymetric encryption

--- a/configuration-server/src/main/resources/bootstrap.properties
+++ b/configuration-server/src/main/resources/bootstrap.properties
@@ -1,1 +1,5 @@
-encrypt.key="misecretkey"
+management.endpoints.web.exposure.include=refresh
+
+encrypt.keyStore.location=classpath:/server.jks
+encrypt.keyStore.password=password
+encrypt.keyStore.alias=keys
