--- a/configuration-server/src/main/resources/application.properties
+++ b/configuration-server/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
 server.port=8888
-spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=classpath:/shared
+spring.profiles.active=default
+spring.cloud.config.server.git.uri=git@github.com:EduardoPanero/configuration-files-private.git
+spring.cloud.config.server.git.private_key_file=/.ssh/id_rsa
+spring.cloud.config.server.git.clone-on-start=true
