Add clients microservice and orders microservice

--- a/clients/src/main/resources/application.properties
+++ b/clients/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8081
 spring.data.postgres.host=localhost
-spring.data.postgres.port=5432
-spring.data.postgres.database=products
+spring.data.postgres.port=5433
+spring.data.postgres.database=clients
 spring.data.postgres.username=root
 spring.data.postgres.password=toor
+
+spring.flyway.baselineOnMigrate = true
+
+
+logging.level.org.springframework.data.r2dbc=DEBUG
+
+
 
