Add comunications between services

--- a/clients/src/main/resources/application.properties
+++ b/clients/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.flyway.baselineOnMigrate = true
 
 
 logging.level.org.springframework.data.r2dbc=DEBUG
-
+jwt.token.secret=IKYCjUtqzf0bzBUfd6cuxTvGJTe62tPOWRtmbYs4vBc=
 
 
