--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8082
+spring.data.postgres.host=localhost
+spring.data.postgres.port=5434
+spring.data.postgres.database=orders
+spring.data.postgres.username=root
+spring.data.postgres.password=toor
 
+es.eduardopanero.microservices.clients.url=http://localhost:8081
+
+spring.flyway.baselineOnMigrate = true
+
+jwt.token.secret=IKYCjUtqzf0bzBUfd6cuxTvGJTe62tPOWRtmbYs4vBc=
